--- a/views/layout.jade
+++ b/views/layout.jade
@@ -86,6 +86,7 @@ html(lang="en" ng-app='myApp')
                         script(src='javascripts/app.js')
                         script(src='javascripts/services.js')
                         script(src='javascripts/controllers.js')
+                        script(src='javascripts/commentsController.js')
                         script(src='javascripts/filters.js')
                         script(src='javascripts/directives.js')
 
