--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -109,7 +109,7 @@ append body
 										+label-primary("{{tipTag}}")
 								#submittedByDiv.small(style="padding-top:5px")
 									span Submitted By: 
-										a(href="/profile"){{submittedBy}}		
+										a(href="/profile/{{submittedBy}}"){{submittedBy}}		
 				//+carousel("sample",["{image:"resources/images/b01930a6957f7a1ffc3536132b554bb2",caption:"blah"}"])
 			
 			.addATipPageWrapper(ng-show="addATipToggle")
