--- a/views/layout.jade
+++ b/views/layout.jade
@@ -57,6 +57,22 @@ html(lang="en" ng-app='myApp')
                         link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
                         //link(rel="stylesheet",href="css/bootstrap.min.css")
                         link(rel='stylesheet', href='/stylesheets/style.css')
+                        link(rel='stylesheet', href='/stylesheets/animate.css')
+                base(href="/")
+                block scripts
+                        script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js')
+                        script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
+                        script(src='javascripts/jquery.canvasjs.min.js')
+                        script(src='javascripts/angular-file-upload.min.js')
+                        script(src='javascripts/ngStorage.min.js')
+                        script(src='javascripts/angular-animate.min.js')
+                        script(src='javascripts/app.js')
+                        script(src='javascripts/services.js')
+                        script(src='javascripts/controllers.js')
+                        script(src='javascripts/commentsController.js')
+                        script(src='javascripts/profileController.js')
+                        script(src='javascripts/filters.js')
+                        script(src='javascripts/directives.js')
         body(data-spy="scroll",data-target=".scrollspy" ng-controller="bodyController")
                +navbar("Music Production Helper","navbar_menu")
                         +nav_item("/") Chromatic Wheel
@@ -76,17 +92,4 @@ html(lang="en" ng-app='myApp')
                 #profileLoggedIn(ng-show="isLoggedIn()" style="float:right;")
                         a(href="/logout" ng-click="signOutClicked()") Sign out
                 block body
-                block scripts
-                        script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js')
-                        script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
-                        script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
-                        script(src='javascripts/jquery.canvasjs.min.js')
-                        script(src='javascripts/angular-file-upload.min.js')
-                        script(src='javascripts/ngStorage.min.js')
-                        script(src='javascripts/app.js')
-                        script(src='javascripts/services.js')
-                        script(src='javascripts/controllers.js')
-                        script(src='javascripts/commentsController.js')
-                        script(src='javascripts/filters.js')
-                        script(src='javascripts/directives.js')
 
