added TinyMCE and Fix for menu collapse bug

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -59,8 +59,7 @@ append body
 					#TipTitlePanel.panel.panel-default
 						#panelBody.panel-body.panel-body(style="text-indent: 0px;padding-bottom:0px;")
 							div.tipDescription#tipBody(style="text-indent: 0px;padding-bottom:0px;" ng-repeat="tipPart in tipBodyArray")			
-								p#descBody
-									{{tipPart.tipDescription}}
+								p#descBody(ng-bind-html='tipPart.tipDescription | to_trusted')
 									
 									br
 									#imgDiv(ng-if="hasImage")
