--- a/views/layout.jade
+++ b/views/layout.jade
@@ -62,6 +62,8 @@ html(lang="en" ng-app='myApp')
                 block scripts
                         script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js')
                         script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
+                        script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+                        script(src='//cdn.tinymce.com/4/tinymce.min.js')
                         script(src='javascripts/jquery.canvasjs.min.js')
                         script(src='javascripts/angular-file-upload.min.js')
                         script(src='javascripts/ngStorage.min.js')
