style change alert-info

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -181,8 +181,8 @@ a {
 
 .alert-info,.alert-warning {
     color: #31708f;
-    background-color: #eeeaf3;
-    border-color: #bcc5f1;
+    background-color: #f6fff3;
+    border-color: #4a8b2e;
 }
 .alert-success {
     color: #3c763d;
