tips page edit submitted tips / tinymce add desc

--- a/views/comments-list.jade
+++ b/views/comments-list.jade
@@ -1,7 +1,7 @@
 
 textarea.textAreaTip#commentInput.form-control(style='width:100%;height:100px;margin-top:10px;resize:vertical' placeholder="Add a comment" ng-model="postCommentAdd")
 div.buttonWrapper
-	a.btn.btn-default.btn-post-comment.pull-left#postCommentButton(style='margin-top:5px;' ng-click='postACommentClicked()') Save
+	a.btn.btn-primary.btn-post-comment.pull-left#postCommentButton(style='margin-top:5px;' ng-click='postACommentClicked()') Save
 	br
 h3.comments-title		
 ul.panel-body.comment-detail-list(style='margin-top:25px;')
