--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,8 +63,18 @@ a {
     margin-right:5px;
     background-color: #8a8a8a;
 }
-
-
+.genereInputWrapper{
+float:left;width:26%;margin-left:2%;margin-bottom:5px;
+}
+.theoryInputWrapper{
+float:left;width:25%;
+}
+.vstInputWrapper{
+float:left;width:22%;
+}
+.dawInputWrapper{
+    float:left;width:25%;
+}
 /*Sign In Style*/
 #signInWrapper{
     margin: 0 auto;
