--- a/views/layout.jade
+++ b/views/layout.jade
@@ -79,9 +79,9 @@ html(lang="en" ng-app='myApp')
                +navbar("Music Production Helper","navbar_menu")
                         +nav_item("/") Chromatic Wheel
                         +nav_item("tipLib") Tip Library 
-                        //+nav_item("about") About
-                        +nav_item("samplesPage") Samples
+                        //+nav_item("samplesPage") Samples
                         +nav_item("profile")#profileButton Profile
+                        +nav_item("about") About
                         +nav_item_dropdown("#")(label="Connect")
                                 //+nav_item("https://soundcloud.com/crazylegsmusic","soundCloudLink") SoundCloud
                                 //+nav_item("https://www.facebook.com/crazylegsmusic/","facebookLink") Facebook
