--- a/views/profile.jade
+++ b/views/profile.jade
@@ -5,8 +5,12 @@ append body
 		#profileNotify(ng-show="!isLoggedIn()")
 		#profilePage.contentWrapper(ng-show="isLoggedIn()")
 			.div()
-				h2 {{username}}
-				+alert-i-warning("The profile page is still in development.  This page will display your saved and contributed tips and samples, your comments, your social network links, stats, and much more!","heart")
+				
+				h2 
+					#greeting= greeting
+						span {{username}}
+				#alert(ng-hide='true')
+					+alert-i-warning("The profile page is still in development.  This page will display your saved and contributed tips and samples, your comments, your social network links, stats, and much more!","heart")
 				a(href='/tipLib')
 					span Go to Tip Library 
 				br
@@ -14,6 +18,7 @@ append body
 					span Go to Chromatic Wheel
 				#profileDetails(ng-show="false")
 					#userName= username
+					
 		br
 		.tipsWrapperClick#savedTipsWrapper.contentWrapper(style='padding-right: 0px;padding-left: 0px;border-width: thin;')
 			div.tipMetaClick.row(ng-click='toggleShowSaved()' style='')
