--- a/views/signUp.jade
+++ b/views/signUp.jade
@@ -4,29 +4,33 @@
 extends layout
 append body
 	.container.pageController(ng-controller="signUpController" style="margin:0 auto;width:90%;max-width:966px;")
-		+alert-i-warning("Signing up with Music Production Helper allows you to view your profile page.  With a profile on mphelper.io you can: Contribute to the Tip Library, comment on tips, view your loved tips, link your soundcloud account and download samples from the Samples Library")
-		a(href='/profile/kcedge') Sample profile
+		+alert-i-warning("Signing up with Music Production Helper allows you to view your profile page.  With a profile on mphelper.io you can: contribute to the Tip Library, save tips, comment on tips, network yourself with other producers, link your SoundCloud, and gain a good rep for helping others!")
+		
 		#signInWrapper.formInputWrapper
 
-			.titleBannerDiv()
+			.titleBannerDiv(display:inline-block)
+				#sampleProfileDiv.small(style='float:right')
+					a(href='/profile/kcedge') Sample profile
 				h3
 					#titleName= title
 			form#signInDetails(action="/signUp" method = "post")
 
 				+label-info("Username:")
 				br
-				input#usernameInput.form-control(name="username" ng-model="signUpUsername")
-				+label-info("Email:")
-				br
-				input#emailInput.form-control(name="email" ng-model="signUpEmail")
+				input#usernameInput.form-control(name="username" ng-model="signUpUsername" ng-required)
+				//+label-info("Email:")
+				//br
+				//input#emailInput.form-control(name="email" ng-model="signUpEmail")
 				+label-info("Password:")
 				br
-				input#passWordInput.form-control(type="password" name="password" ng-model="signUpPassword")
+				input#passWordInput.form-control(type="password" name="password" ng-model="signUpPassword" ng-required)
 				+label-info("Password Confirm:")
-				input#signUpConfirmInput.form-control(type="password" ng-model="signUpPasswordConfirm")
-				#btnSignInSubmit.keyButton(ng-click="signUpSubmitClicked()")
-					button.btn.btn-primary(type="submit")
+				input#signUpConfirmInput.form-control(type="password" ng-model="signUpPasswordConfirm" ng-required)
+				#btnSignInSubmit.keyButton(ng-click="signUpSubmitClicked()" )
+					button.btn.btn-primary(type="submit" ng-disabled='!signUpGood()')
 						span Sign Up
 				#signInLinkWrapper
 					a#signInLink(href="/signIn")
-						span Already a member? Sign In			
+						span Already a member? Sign In	
+				#signUpError.small(style='color:red')
+					{{signUpErrorMessage}}
