about update chromatic wheel style

--- a/views/about.jade
+++ b/views/about.jade
@@ -17,11 +17,14 @@ append body
 				#rightdDiv(style='float:right;width:49%;')
 					h2 Tip
 					img.img-rounded.aboutImg(style='width:100%' src="https://s3-us-west-2.amazonaws.com/tip-photos-bucket/1483118362372")
+			hr
 			#imgAboutProfile
 				h2 Example Profile
 				img.img-rounded(style='width:100%' src='https://s3-us-west-2.amazonaws.com/tip-photos-bucket/1483120072289')
-
-
+			hr
+			#imgExampleTips
+				h2 More examples
+				img.img-rounded(style='width:100%' src='https://s3-us-west-2.amazonaws.com/tip-photos-bucket/1483121430982')
 			//+panel-primary("Casey CrazyLegs","user")
 			//	p Hi, I'm a Software Engineer and Music Producer from Ann Arbor MI.  My DJ name currently is Casey Crazylegs. Long story short, as a kid I was a fool with crazy legs. 
 			//	p The sites main goal is to help other music producers/artists like myself on their journey with music.  I hope to develop tools that help these artists do what they do best, be creative and create good music.
